--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -25,3 +25,10 @@ jobs:
       run: npm install
     - name: Notify Success
       run: echo "all dependency install successfully!"
+    - name: Log in to Docker
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Notify Success
+      run: echo "docker login successfully successfully!"
