--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,21 +20,31 @@ jobs:
     - name:  Install dependencies
       run: npm install
 
-    - name:  Docker Login
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Run Lint
+      run: npm run lint
 
-    - name:  Build & Push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: |
-          mokchhedul/restaurant-frontend:latest
-          mokchhedul/restaurant-frontend:${{ github.sha }}
-        file: ./Dockerfile
+    - name: Run Unit Tests
+      run: npm test
 
-    - name:  Final Success Message
-      run: echo "Frontend Docker image built and pushed to Docker Hub successfully!"
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name:  Docker Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name:  Build & Push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            mokchhedul/restaurant-frontend:latest
+            mokchhedul/restaurant-frontend:${{ github.sha }}
+          file: ./Dockerfile
+
+      - name:  Final Success Message
+        run: echo "Frontend Docker image built and pushed to Docker Hub successfully!"
