--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -28,8 +28,21 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    
+    needs: [test]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build the Next.js app
+        run: npm run build
       - name:  Docker Login
         uses: docker/login-action@v2
         with:
