--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.10.0",
+    "jest": "^30.0.4",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "react": "^19.0.0",
