--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Run Lint
       run: npm run lint
 
-    - name: Run Unit Tests
-      run: npm test
+    # - name: Run Unit Tests
+    #   run: npm test
 
   build:
     runs-on: ubuntu-latest
